--- a/lakmawi_home/templates/home.html
+++ b/lakmawi_home/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 {% for post in object_list %}
-<div class="card" style="width: 18rem; margin: 10px; float: left;">
+<div class="card" style="width: auto; margin: 10px; float: left;">
   <img src="{{ post.image.url }}" class="card-img-top">
   <div class="card-body">
     <h5 class="card-title"><a href="{% url 'post-details' post.pk %}"
